--- a/python/index.html
+++ b/python/index.html
@@ -246,8 +246,7 @@ if "cryptography" not in sys.modules:
 
     // tkinter 포함 각종 tkinter 하위 모듈(파일대화상자, 메시지박스, simpledialog, colorchooser, ttk)도
     // 사용자가 import하면 "대충" 동작하도록 만들어줍니다.
-    // 기존에 쓰던 DummyTk 에 더 많은 메서드를 흉내 내고,
-    // __getattr__로 모든 호출을 안전하게 처리.
+    // 이제 tkinter.Button, tkinter.Label 등도 전부 DummyWidget 처리 + __getattr__로 뭘 해도 에러 안 나게 함.
     const dummyTkinter = `
 import sys, types
 
@@ -261,7 +260,7 @@ class _AttrSafe:
     def __getattr__(self, item):
         def dummy_method(*args, **kwargs):
             print(f"[{self._dummy_name}.{item}] called with args={args}, kwargs={kwargs}")
-            return self  # 계속 체인 가능
+            return self  # 체인 형식으로 계속 반환
         return dummy_method
 
     def __setattr__(self, key, value):
@@ -272,92 +271,113 @@ class DummyTk(_AttrSafe):
         super().__init__(name="tkinter.Tk")
         print("Dummy tkinter.Tk created. (실제 GUI는 사용할 수 없습니다.)")
 
+class DummyWidget(_AttrSafe):
+    def __init__(self, widget_name="tkinter.Widget", *args, **kwargs):
+        super().__init__(name=widget_name)
+        print(f"Dummy {widget_name} created.")
+
 if "tkinter" not in sys.modules:
     tkinter = types.ModuleType("tkinter")
-    # 주: 실제 tkinter.Tk(...) -> DummyTk
+
+    # Tk
     tkinter.Tk = DummyTk
     tkinter.mainloop = lambda: print("Dummy tkinter.mainloop called.")
+
+    # 대표적인 위젯들(사용자가 tkinter.Button(...) 식으로 호출할 때)
+    tkinter.Button = lambda *a, **kw: DummyWidget("tkinter.Button", *a, **kw)
+    tkinter.Label = lambda *a, **kw: DummyWidget("tkinter.Label", *a, **kw)
+    tkinter.Frame = lambda *a, **kw: DummyWidget("tkinter.Frame", *a, **kw)
+    tkinter.Entry = lambda *a, **kw: DummyWidget("tkinter.Entry", *a, **kw)
+    tkinter.LabelFrame = lambda *a, **kw: DummyWidget("tkinter.LabelFrame", *a, **kw)
+    tkinter.Checkbutton = lambda *a, **kw: DummyWidget("tkinter.Checkbutton", *a, **kw)
+    tkinter.Radiobutton = lambda *a, **kw: DummyWidget("tkinter.Radiobutton", *a, **kw)
+    tkinter.Scale = lambda *a, **kw: DummyWidget("tkinter.Scale", *a, **kw)
+
+    # 하위 모듈들
+    if "tkinter.filedialog" not in sys.modules:
+        filedialog = types.ModuleType("tkinter.filedialog")
+        def dummy_askopenfilename(*args, **kwargs):
+            print("Dummy askopenfilename called.")
+            return ""
+        def dummy_asksaveasfilename(*args, **kwargs):
+            print("Dummy asksaveasfilename called.")
+            return ""
+        def dummy_askdirectory(*args, **kwargs):
+            print("Dummy askdirectory called.")
+            return ""
+        filedialog.askopenfilename = dummy_askopenfilename
+        filedialog.asksaveasfilename = dummy_asksaveasfilename
+        filedialog.askdirectory = dummy_askdirectory
+        sys.modules["tkinter.filedialog"] = filedialog
+        tkinter.filedialog = filedialog
+
+    if "tkinter.messagebox" not in sys.modules:
+        messagebox = types.ModuleType("tkinter.messagebox")
+        def dummy_showinfo(title, message):
+            print("[messagebox.showinfo]", title, message)
+        def dummy_showerror(title, message):
+            print("[messagebox.showerror]", title, message)
+        def dummy_askyesno(title, message):
+            print("[messagebox.askyesno]", title, message)
+            return False
+        def dummy_askokcancel(title, message):
+            print("[messagebox.askokcancel]", title, message)
+            return False
+        messagebox.showinfo = dummy_showinfo
+        messagebox.showerror = dummy_showerror
+        messagebox.askyesno = dummy_askyesno
+        messagebox.askokcancel = dummy_askokcancel
+        sys.modules["tkinter.messagebox"] = messagebox
+        tkinter.messagebox = messagebox
+
+    if "tkinter.simpledialog" not in sys.modules:
+        simpledialog = types.ModuleType("tkinter.simpledialog")
+        def dummy_askstring(title, prompt, **kwargs):
+            print("[simpledialog.askstring]", title, prompt)
+            return ""
+        def dummy_askinteger(title, prompt, **kwargs):
+            print("[simpledialog.askinteger]", title, prompt)
+            return None
+        def dummy_askfloat(title, prompt, **kwargs):
+            print("[simpledialog.askfloat]", title, prompt)
+            return None
+        simpledialog.askstring = dummy_askstring
+        simpledialog.askinteger = dummy_askinteger
+        simpledialog.askfloat = dummy_askfloat
+        sys.modules["tkinter.simpledialog"] = simpledialog
+        tkinter.simpledialog = simpledialog
+
+    if "tkinter.colorchooser" not in sys.modules:
+        colorchooser = types.ModuleType("tkinter.colorchooser")
+        def dummy_askcolor(*args, **kwargs):
+            print("Dummy colorchooser.askcolor called.")
+            return ((0, 0, 0), "#000000")
+        colorchooser.askcolor = dummy_askcolor
+        sys.modules["tkinter.colorchooser"] = colorchooser
+        tkinter.colorchooser = colorchooser
+
+    if "tkinter.ttk" not in sys.modules:
+        ttk = types.ModuleType("tkinter.ttk")
+        # ttk도 비슷하게 대응
+        ttk.Button = lambda *a, **kw: DummyWidget("tkinter.ttk.Button", *a, **kw)
+        ttk.Label = lambda *a, **kw: DummyWidget("tkinter.ttk.Label", *a, **kw)
+        ttk.Entry = lambda *a, **kw: DummyWidget("tkinter.ttk.Entry", *a, **kw)
+        ttk.Frame = lambda *a, **kw: DummyWidget("tkinter.ttk.Frame", *a, **kw)
+        sys.modules["tkinter.ttk"] = ttk
+        tkinter.ttk = ttk
+
+    # tkinter 모듈에도 __getattr__로 모든 속성/메서드 자동 dummy 처리
+    def _tkinter_getattr(name):
+        print(f"[DUMMY] Accessing 'tkinter.{name}'. returning a DummyWidget or DummyTk if needed.")
+        # 혹시 모를 다른 속성 접근 -> DummyWidget 생성
+        return lambda *a, **kw: DummyWidget(f"tkinter.{name}", *a, **kw)
+
+    setattr(tkinter, "__getattr__", _tkinter_getattr)
+
     sys.modules["tkinter"] = tkinter
 else:
-    tkinter = sys.modules["tkinter"]
-
-# 하위 모듈들
-if "tkinter.filedialog" not in sys.modules:
-    filedialog = types.ModuleType("tkinter.filedialog")
-    def dummy_askopenfilename(*args, **kwargs):
-        print("Dummy askopenfilename called.")
-        return ""
-    def dummy_asksaveasfilename(*args, **kwargs):
-        print("Dummy asksaveasfilename called.")
-        return ""
-    def dummy_askdirectory(*args, **kwargs):
-        print("Dummy askdirectory called.")
-        return ""
-    filedialog.askopenfilename = dummy_askopenfilename
-    filedialog.asksaveasfilename = dummy_asksaveasfilename
-    filedialog.askdirectory = dummy_askdirectory
-    sys.modules["tkinter.filedialog"] = filedialog
-    tkinter.filedialog = filedialog
-
-if "tkinter.messagebox" not in sys.modules:
-    messagebox = types.ModuleType("tkinter.messagebox")
-    def dummy_showinfo(title, message):
-        print("[messagebox.showinfo]", title, message)
-    def dummy_showerror(title, message):
-        print("[messagebox.showerror]", title, message)
-    def dummy_askyesno(title, message):
-        print("[messagebox.askyesno]", title, message)
-        return False
-    def dummy_askokcancel(title, message):
-        print("[messagebox.askokcancel]", title, message)
-        return False
-    messagebox.showinfo = dummy_showinfo
-    messagebox.showerror = dummy_showerror
-    messagebox.askyesno = dummy_askyesno
-    messagebox.askokcancel = dummy_askokcancel
-    sys.modules["tkinter.messagebox"] = messagebox
-    tkinter.messagebox = messagebox
-
-if "tkinter.simpledialog" not in sys.modules:
-    simpledialog = types.ModuleType("tkinter.simpledialog")
-    def dummy_askstring(title, prompt, **kwargs):
-        print("[simpledialog.askstring]", title, prompt)
-        return ""
-    def dummy_askinteger(title, prompt, **kwargs):
-        print("[simpledialog.askinteger]", title, prompt)
-        return None
-    def dummy_askfloat(title, prompt, **kwargs):
-        print("[simpledialog.askfloat]", title, prompt)
-        return None
-    simpledialog.askstring = dummy_askstring
-    simpledialog.askinteger = dummy_askinteger
-    simpledialog.askfloat = dummy_askfloat
-    sys.modules["tkinter.simpledialog"] = simpledialog
-    tkinter.simpledialog = simpledialog
-
-if "tkinter.colorchooser" not in sys.modules:
-    colorchooser = types.ModuleType("tkinter.colorchooser")
-    def dummy_askcolor(*args, **kwargs):
-        print("Dummy colorchooser.askcolor called.")
-        return ((0, 0, 0), "#000000")
-    colorchooser.askcolor = dummy_askcolor
-    sys.modules["tkinter.colorchooser"] = colorchooser
-    tkinter.colorchooser = colorchooser
-
-if "tkinter.ttk" not in sys.modules:
-    ttk = types.ModuleType("tkinter.ttk")
-    class DummyWidget(_AttrSafe):
-        def __init__(self, *args, **kwargs):
-            super().__init__(name="tkinter.ttk.Widget")
-            print("Dummy ttk widget created.")
-    # Button, Label, etc. 전부 이 클래스 이용
-    ttk.Widget = DummyWidget
-    ttk.Button = DummyWidget
-    ttk.Label = DummyWidget
-    ttk.Entry = DummyWidget
-    ttk.Frame = DummyWidget
-    sys.modules["tkinter.ttk"] = ttk
-    tkinter.ttk = ttk
+    # 이미 "tkinter"가 sys.modules에 있다면, 사용자가 별도 세팅한 경우일 수도 있으니 패스
+    pass
 `;
 
     /*
@@ -370,25 +390,21 @@ if "tkinter.ttk" not in sys.modules:
       // 파이썬 코드로 __getattr__ 재정의
       return `
 def _fallback_getattr(self, attr):
-    print(f"[DUMMY] Accessing '{moduleName}.{attr}'. Returning a dummy callable.")
+    print(f"[DUMMY] Accessing '${moduleName}.{attr}'. Returning a dummy callable.")
     def _dummy(*args, **kwargs):
-        print(f"[DUMMY FUNCTION] {moduleName}.{attr} called with args={{args}}, kwargs={{kwargs}}")
+        print(f"[DUMMY FUNCTION] ${moduleName}.{attr} called with args={{args}}, kwargs={{kwargs}}")
         return None
     return _dummy
 
 import sys
 
 _mod = sys.modules.get("${moduleName}")
-if _mod is not None:
-    # 파이썬의 ModuleType에 __getattr__을 다이렉트로 집어넣기 어려우므로,
-    # __getattr__ = function 형태로 할당해 줍니다 (Python 3.7+).
-    if not hasattr(_mod, "__getattr__"):
-        setattr(_mod, "__getattr__", _fallback_getattr)
+if _mod is not None and not hasattr(_mod, "__getattr__"):
+    setattr(_mod, "__getattr__", _fallback_getattr)
 `;
     }
 
     // 사용자가 입력한 Python 코드를 분석하여 import할 라이브러리 목록을 추출하는 간단한 정규식
-    // (주의: 아주 복잡한 import 문까지 100% 정확히 처리하진 못하지만, 일반적인 형태는 잘 잡아냄)
     function findImports(code) {
       // 예: "import torch", "import tensorflow as tf", "from keras.models import load_model" ...
       // 그룹1 = 첫 번째 모듈명
@@ -446,11 +462,11 @@ sys.stderr = JSWriter()
         // 1) 사용자가 작성한 코드에서 import 되는 모듈 조사
         let importedModules = findImports(userCode);
 
-        // 2) micropip로 설치해야 할 애들 골라서 설치 (이미 Pyodide 포함 라이브러리는 제외)
+        // 2) micropip로 설치해야 할 애들 골라서 설치 (이미 Pyodide에 포함된 numpy/pandas 등은 제외)
         let toInstall = [];
         for (let m of importedModules) {
           if (micropipInstallable[m]) {
-            toInstall.push(micropipInstallable[m]); // PyPI 패키지명
+            toInstall.push(micropipInstallable[m]);
           }
         }
         if (toInstall.length > 0) {
@@ -473,7 +489,6 @@ asyncio.run(install_packages(${JSON.stringify(toInstall)}))
         }
 
         // 3) “더미 모듈”이어야 할 애들 골라서, 간단한 동작을 하는 파이썬 모듈 코드 실행
-        //    (tkinter, tensorflow, torch, 등등)
         let dummyCode = "";
         // tkinter는 import가 하나라도 있으면 전체 하위 모듈까지 정의
         if (importedModules.includes("tkinter")) {
@@ -488,8 +503,7 @@ asyncio.run(install_packages(${JSON.stringify(toInstall)}))
         // 3-1) “더미 모듈”에 대해서도 __getattr__로 fallback 처리해서 AttributeError 방지
         for (let modName of importedModules) {
           if (modName === "tkinter") {
-            // tkinter는 이미 dummyTkinter 내부에서 __getattr__ 대신
-            // 개별 클래스로 처리했으므로 생략
+            // tkinter는 이미 dummyTkinter 내부에서 __getattr__ 붙였으므로 생략
             continue;
           }
           if (dummyModules[modName]) {
